use `annotate` gem

--- a/test/fixtures/geolocations.yml
+++ b/test/fixtures/geolocations.yml
@@ -1,4 +1,17 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: geolocations
+#
+#  id         :bigint           not null, primary key
+#  ip         :string           not null
+#  latitude   :float            not null
+#  location   :jsonb            not null
+#  longitude  :float            not null
+#  type       :string           not null
+#  url        :string
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
 
 one:
   ip: MyString
